# ShrekDB

./: .gitignore  CMakeLists.txt  README.md  characters.tsv  characters2.tsv  data.tsv  data2.tsv  negative.tsv  positive.tsv
22C_FinalProject/: README.md
22C_FinalProject/doc/: README.md  UML.mdj
22C_FinalProject/src/: README.md  main.cpp
22C_FinalProject/src/character/: character.cpp  character.h  database.cpp  database.h
22C_FinalProject/src/dataStructs/: BST.h  BST_Node.h  BST_Node_taras.h  BST_taras.h  Graph.h  GraphEdge.h  GraphNode.h  HashTable.h  LinkNode.h  LinkedList.h  Queue.h  README.md  Stack.h  dataStructs.h  hashtableUnit.h
22C_FinalProject/src/ui/: README.md  interactive.h  mainscreen.cpp  mainscreen.h
22C_FinalProject/src/util/: README.md  color.cpp  color.h  colors.h  comparator.h  converter.cpp  converter.h  hasher.h  ioutil.cpp  ioutil.h
22C_FinalProject/test/: README.md  bstTest.h  charactertest.h  converterTest.h  dbtest.h  graphTest.h  hashTest.h  listTest.h  tableTest.h  test.cpp  utilTest.h
